# Learning-CUDA

./: CMakeLists.txt
06_photon_sim/weiwei2027/: .clang-format  .gitignore  CMakeLists.txt  COORDINATE_SYSTEM.md  DESIGN.md  FINAL_SUBMISSION_SUMMARY.md  Makefile  PORTING_PLAN.md  PROJECT_REQUIREMENTS.md  README.md  REMOTE_TEST_QUICKSTART.md  WORKLIST.md  quick_remote_test.sh  remote_test_guide.md  rsync_correct.sh  run_all_tests.sh  run_all_tests_1b.sh  run_remote_tests.sh
06_photon_sim/weiwei2027/data/: README.md  geometry_1layer.txt  geometry_3layer.txt  geometry_3layer_sphere.txt  geometry_with_sphere.txt  materials.csv  source.txt  source_parallel.txt  source_parallel_100m.txt  source_parallel_10m.txt  source_parallel_1b.txt  source_point_100m.txt  source_point_10m.txt  source_point_1b.txt
06_photon_sim/weiwei2027/include/: photon_sim.cuh  types.h  utils.h
06_photon_sim/weiwei2027/output/: image_info.txt
06_photon_sim/weiwei2027/report/: NCU_ANALYSIS_DETAILED.md  NCU_ANALYSIS_REPORT.md  NCU_ANALYSIS_SUMMARY.md  REPORT.md  TESTING_NOTES.md  nsys_profile_1b_sphere.txt  report.md  report_final.md
06_photon_sim/weiwei2027/report/ncu_results/: full_report.txt
06_photon_sim/weiwei2027/scripts/: compare_fixed.py  compare_sources.py  detailed_analysis.py  generate_report_figures.py  visualize.py  visualize_geometry.py  visualize_geometry_mpl.py
06_photon_sim/weiwei2027/src/: photon_sim_cpu.cpp  photon_sim_iluvatar.cu  photon_sim_metax.maca  photon_sim_moore.mu  photon_sim_nv.cu  utils.cpp
06_photon_sim/weiwei2027/tests/: Makefile  PARSER_CHECK_REPORT.md  README.md  check_coverage.cpp  test_basic.cu  test_edge.cpp  test_layer.cpp  test_parser.cpp  test_sphere.cpp  verify_photon.cpp
src/: kernels.cu  kernels.maca  kernels.mu
